<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginBottom="55dp"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/password_reset_description"
                android:src="@drawable/password_reset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="20dp"
                android:text="@string/reset_password_instruction"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <AutoCompleteTextView
                android:id="@+id/email_reset_txt"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/emailReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/reset_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_gradient"
                android:text="@string/reset_password"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/go_back_reset_password_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/go_back_to_sign_in"
                android:textColor="@color/white"  />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>